# fprint

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.py  fprint.pxd  fprint.pyx  pyproject.toml  setup.cfg  setup.py
examples/: enroll.py  identify.py  list_devices.py  verify.py
lib/: fprint.pxd  fprint.pyx
