[metadata]
name = fprintw
author = Andrey Torsunov
description = Wrapper for libfprint v0.99
version = 0.2.1
url = https://github.com/gtors/fprint
keywords =
  fingerprint
  fprint
classifiers =
  Programming Language :: Python :: 3.7
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[bdist_wheel]
universal = 0
